--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-.card:hover {
+#voteContainer .card:hover {
     opacity: 0.7;
     cursor: pointer;
 }
 
-.card:active {
+#voteContainer .card:active {
     transform: scale(0.9);
 }
